# lmri_uvcgan

./: README.md  idleOne.txt  idleTwo.txt  lmri.sh  lmri.sub  outfile.846779.0.out  outfile.846781.0.out  pyproject.toml
contrib/: conda_env.yaml
scripts/: download_dataset.sh  download_model.sh  downsize_right.py  eval_fid.py  eval_il2_scores.py  print_model.py  translate_images.py
scripts/afhq/: pretrain_afhq.py  train_cat2dog_translation.py
tests/: test_queues.py
uvcganlmri/: launch.sh
uvcganlmri/cgan/: autoencoder.py  cyclegan.py  named_dict.py  pix2pix.py  simple_autoencoder.py
uvcganlmri/torch/: image_masking.py  select.py
uvcganmri/: presets.py  sub.sub
uvcganmri.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
uvcganmri/base/: image_pool.py  losses.py  schedulers.py  weight_init.py
uvcganmri/cgan/: autoencoder.py  checkpoint.py  funcs.py  model_base.py  pix2pix.py  simple_autoencoder.py  uvcgan2.py
uvcganmri/config/: args.py  config.py  config_base.py  data_config.py  funcs.py  model_config.py  transfer_config.py
uvcganmri/data/: data.py  loader_zipper.py  transforms.py
uvcganmri/data/datasets/: celeba.py  image_domain_folder.py  image_domain_hierarchy.py
uvcganmri/eval/: funcs.py
uvcganmri/models/: funcs.py
uvcganmri/models/generator/: vit.py  vitmodnet.py  vitunet.py
uvcganmri/torch/: funcs.py  gradient_penalty.py  queue.py  spectr_norm.py
uvcganmri/train/: train.py  transfer.py
uvcganmri/train/callbacks/: history.py
uvcganmri/train/metrics/: loss_metrics.py
uvcganmri/utils/: funcs.py  log.py  parsers.py
